# Spock-test

./: LICENSE  Spock-test.cabal  SpockTest.hs
